--- a/unitfour/style.css
+++ b/unitfour/style.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url(../unitfour/images/docbee.jpg);
+	background-image: url(images/docbee.jpg);
 	background-repeat: repeat-x;
 	background-color: #34495e;
 	margin-top: 20px;
