--- a/weekthreev2/style.css
+++ b/weekthreev2/style.css
@@ -1,7 +1,7 @@
 body {
 	background-color: #34495e;
 	color: #ecf0f1;
-	font-size: 16px;
+	font-size: 24px;
 	font-family: 'Bree Serif', serif;
 	text-align: center;
 	padding: 20px;
@@ -14,6 +14,10 @@ h1 {
 
 img {
 	border: 5px solid #ecf0f1;
+}
+
+#nav {
+	font-family: 'Coda Caption', sans-serif;
 }
 
 a {
@@ -37,7 +41,7 @@ a:hover {
 
 #main-text {
 	text-align: left;
-	font-size: 14px;
+	font-size: 18px;
 }
 
 #active {
