--- a/unit4/style.css
+++ b/unit4/style.css
@@ -1,4 +1,6 @@
 body {
+	background-image: url("images/docbee.jpg");
+	background-repeat: repeat-x;
 	background-color: #34495e;
 	margin-top: 20px;
 	margin-right: 0;
@@ -8,7 +10,6 @@ body {
 	color: #ecf0f1;
 	font-size: 14px;
 	font-family: 'Bree Serif', serif;
-	text-align: center;
 }
 
 h1 {
@@ -17,12 +18,14 @@ h1 {
 	font-size: 46px;
 	background-color: #ecf0f1;
 	margin: 0;
+	text-align: center;
 }
 
 #nav {
 	font-family: 'Coda Caption', sans-serif;
 	font-size: 24px;
 	background-color: #bdc3c7;
+	text-align: center;
 }
 
 a {
@@ -45,8 +48,9 @@ a:hover {
 }
 
 #main-text {
-	padding-left: 20px;
 	text-align: left;
+	margin-top: 300px;
+	padding-left: 20px;
 }
 
 #main-text a {
