--- a/ashleytypography/style.css
+++ b/ashleytypography/style.css
@@ -17,8 +17,9 @@ header {
 h1 {
 	font-family: 'Quicksand', sans-serif;
 	font-weight: lighter;
-	width: 800px;
+	/* width: 690px; */
 	font-size: 50px;
+	float: left;
 }
 
 nav {
@@ -40,18 +41,23 @@ nav a:hover {
 }
 
 #wrapper {
-	padding: 10px 50px;
+	/* padding: 10px 50px; */
 	text-align: center;
 }
 
 img {
-	display: block;
-	float: left;
+	/* display: block; */
+	/* float: left; */
 	padding: 10px;
+	width: 15%;
 }
 
-img a:hover {
-	opacity: 50%;
+img:hover {
+	opacity: .7;
+}
+
+#featured {
+	width: 32%;
 }
 
 #row1 {
@@ -72,5 +78,23 @@ footer {
 	clear: both;
 }
 
+@media only screen and (max-width: 800px){
+	h1 {
+		float: none;
+	}
+	nav {
+		float: none;
+	}
+}
 
+@media only screen and (max-width: 600px) {
+	h1 {
+		font-size: 36px;
+	}
+	img, #featured {
+		width: 60%;
+		padding: 0;
+		margin: 1%
+	}
+}
 
