font awesome icons + photo gallery

--- a/unit8/style.css
+++ b/unit8/style.css
@@ -29,10 +29,14 @@ h1 a {
 	color: #f1c40f;
 }
 
+nav {
+	float: right;
+}
+
 nav a {
 	text-decoration: none;
 	color: #f1c40f;
-	float: right;
+	float: left;
 	font-size: 2em;
 	display: block;
 	padding: .5em;
@@ -75,7 +79,7 @@ h2 {
 }
 
 #tagline {
-	padding: 1em 3em;
+	padding: 2em 3em;
 }
 
 #highlight {
@@ -106,20 +110,27 @@ footer {
 	background-color: #c0392b;
 	color: #f1c40f;
 	clear: both;
-	padding: 2em;
+	padding: 1em;
+	text-align: center;
 }
 
-footer a {
-	text-decoration: none;
-	color: #f1c40f;
+#contact {
+	font-size: 3em;
 }
 
-footer a:hover {
+.fa { 
+ 	color: #f1c40f;
+ 	text-decoration: none;
+ 	margin-left: .25em;
+ 	margin-right: .25em;
+}
+
+.fa:hover {
 	color: #1abc9c;
 }
 
-#leftfooter {
-	text-align: left;
+#email {
+	margin-top: .5em;
 }
 
 #rightfooter {
@@ -127,11 +138,17 @@ footer a:hover {
 }
 
 @media only screen and (max-width: 1030px) {
-	nav a {
-		float: left;
+	nav {
 		clear: both;
+		float: none;
+	}
+
+	nav a {
+		float: none;
+		clear: none;
 		font-size: 1.5em;
-		padding: .25em;
+		padding: .5em;
+		display: inline;
 	}
 
 	nav a:hover {
@@ -157,15 +174,22 @@ footer a:hover {
 
 	h1 {
 		font-size: 2.8em;
-		padding: .5em;
+		text-align: center;
+		padding: .3em;
 		border: none;
 	}
 
-	nav a {
-		background-color: #1abc9c;
-		width: 100%;	
-		padding: 0;
+	nav {
+		background-color: #f1c40f;
 		text-align: center;
+	}
+
+	nav a {
+		width: 100%;	
+		padding: .5em;
+		display: inline;
+		color: #1abc9c;
+		font-weight: bold;
 	}
 
 	nav a:hover {
