--- a/unit8/style.css
+++ b/unit8/style.css
@@ -165,17 +165,21 @@ footer {
 	.hide {
 		display: none;
 	}
+
+	#contact {
+		font-size: 2em;
+	}
 }
 
 @media only screen and (max-width: 480px){
 	header {
-		padding: 0;
+		padding: 0em;
 	}
 
 	h1 {
 		font-size: 2.8em;
 		text-align: center;
-		padding: .3em;
+		padding: .4em;
 		border: none;
 	}
 
@@ -213,6 +217,11 @@ footer {
 		display: block;
 		font-size: 1em;
 		padding: .5em;
+	}
+
+	.fa {
+		margin-left: .75em;
+		margin-right: .75em;
 	}
 
 }
