--- a/unit8/style.css
+++ b/unit8/style.css
@@ -202,7 +202,7 @@ footer {
 	}
 
 	h1 {
-		font-size: 2.8em;
+		font-size: 2.3em;
 		text-align: center;
 		padding: .4em;
 		border: none;
@@ -255,6 +255,10 @@ footer {
 	.fa {
 		margin-left: .75em;
 		margin-right: .75em;
+	}
+
+	#contact {
+		font-size: 1.7em;
 	}
 
 }
